# aws-advanced-odbc-wrapper

./: .clang-format  .clang-skipfile  .clang-tidy  .gdbinit  .gitignore  CHANGELOG.md  CMakeLists.txt  Maintenance.md  README.md  README.txt  odbc-sample.cpp
driver/: CMakeLists.txt  driver.cpp  driver.def.cmake  driver.h  error.h  host_info.cpp  host_info.h  odbcapi.cpp  odbcapi.h  odbcapi_ansi.cpp  odbcapi_common.cpp  odbcapi_rds_helper.cpp  odbcapi_rds_helper.h  odbcapi_unicode.cpp  poc_shell_driver.def
driver/dialect/: dialect.h  dialect_aurora_mysql.h  dialect_aurora_postgres.h
driver/gui/: odbcsetup.aps  odbcsetup.rc  resource.h  setup.cpp  setup.h
driver/host_list_providers/: aurora_topology_util.cpp  aurora_topology_util.h  cluster_topology_monitor.cpp  cluster_topology_monitor.h  host_list_provider.h  multi_az_topology_util.cpp  multi_az_topology_util.h  rds_host_list_provider.cpp  rds_host_list_provider.h  topology_util.cpp  topology_util.h
driver/host_selector/: highest_weight_host_selector.cpp  host_selector.h  random_host_selector.cpp  round_robin_host_selector.cpp  round_robin_host_selector.h  round_robin_property.h
driver/plugin/: base_plugin.cpp  base_plugin.h  base_token_auth_plugin.cpp  base_token_auth_plugin.h  custom_plugin.h  default_plugin.cpp  default_plugin.h
driver/plugin/aurora_initial_connection_strategy/: aurora_initial_connection_strategy_plugin.cpp  aurora_initial_connection_strategy_plugin.h
driver/plugin/blue_green/: blue_green_hasher.cpp  blue_green_hasher.h  blue_green_interim_status.cpp  blue_green_interim_status.h  blue_green_monitor.cpp  blue_green_monitor.h  blue_green_phase.cpp  blue_green_phase.h  blue_green_plugin.cpp  blue_green_plugin.h  blue_green_role.cpp  blue_green_role.h  blue_green_status.cpp  blue_green_status.h  blue_green_status_provider.cpp  blue_green_status_provider.h
driver/plugin/custom_endpoint/: custom_endpoint_monitor.cpp  custom_endpoint_monitor.h  custom_endpoint_plugin.cpp  custom_endpoint_plugin.h
driver/plugin/failover/: cluster_topology_monitor.cpp  cluster_topology_monitor.h  cluster_topology_query_helper.cpp  cluster_topology_query_helper.h  failover_plugin.cpp  failover_plugin.h
driver/plugin/federated/: adfs_auth_plugin.cpp  adfs_auth_plugin.h  aws_sso_auth_plugin.cpp  aws_sso_auth_plugin.h  base_saml_auth_plugin.cpp  base_saml_auth_plugin.h  browser_auth_flow.cpp  browser_auth_flow.h  html_util.cpp  okta_auth_plugin.cpp  okta_auth_plugin.h  saml_util.cpp  saml_util.h  sso_browser_login_util.cpp  sso_browser_login_util.h
driver/plugin/iam/: iam_auth_plugin.cpp  iam_auth_plugin.h
driver/plugin/limitless/: limitless_plugin.cpp  limitless_plugin.h  limitless_query_helper.cpp  limitless_query_helper.h  limitless_router_monitor.cpp  limitless_router_monitor.h  limitless_router_service.cpp  limitless_router_service.h
driver/plugin/read_write_splitting/: abstract_read_write_splitting_plugin.cpp  abstract_read_write_splitting_plugin.h  read_write_splitting_plugin.cpp  read_write_splitting_plugin.h  simple_read_write_splitting_plugin.cpp  simple_read_write_splitting_plugin.h
driver/util/: attribute_validator.cpp  attribute_validator.h  auth_helper.cpp  auth_helper.h  auth_provider.cpp  auth_provider.h  aws_sdk_helper.cpp  aws_sdk_helper.h  cluster_helper.cpp  cluster_helper.h  concurrent_map.h  concurrent_stack.h  connection_string_helper.cpp  connection_string_helper.h  connection_string_keys.h  host_info_utils.cpp  host_info_utils.h  init_plugin_helper.cpp  init_plugin_helper.h  logger_wrapper.cpp  logger_wrapper.h  map_utils.cpp  map_utils.h  odbc_dsn_helper.cpp  odbc_dsn_helper.h  odbc_helper.cpp  odbc_helper.h  plugin_chain_builder.cpp  plugin_chain_builder.h  plugin_service.cpp  plugin_service.h  rds_lib_loader.cpp  rds_lib_loader.h  rds_strings.h  rds_utils.cpp  rds_utils.h  sliding_cache_map.cpp  sliding_cache_map.h  sql_query_analyzer.cpp  sql_query_analyzer.h  (+4 more)
test/: CMakeLists.txt  simple_drv_conn.cpp
test/common/: base_connection_test.h  connection_string_builder.h  connection_string_builder_test.cpp  odbc_helper.cpp  odbc_helper.h  string_helper.cpp  string_helper.h  test_runner.cpp  test_utils.cpp  test_utils.h
test/compatibility/: CMakeLists.txt  compare_results.py  connection_test.cpp  odbc_api_test.cpp  transactions_test.cpp
test/integration/: CMakeLists.txt  aurora_initial_connection_strategy_integration_test.cpp  base_failover_integration_test.cpp  base_failover_integration_test.h  blue_green_integration_test.cpp  custom_endpoint_integration_test.cpp  failover_integration_test.cpp  iam_authentication_integration_test.cpp  integration_test_utils.cpp  integration_test_utils.h  limitless_integration_test.cpp  rds_strings_integration_test.cpp  read_write_splitting_integration_test.cpp  secrets_manager_integration_test.cpp  simple_read_write_splitting_integration_test.cpp  sso_failover_integration_test.cpp  transactions_test.cpp
test/resources/: odbc.ini.in  odbcinst.ini.in
test/unit_test/: CMakeLists.txt  adfs_auth_plugin_test.cpp  adfs_saml_util_test.cpp  attribute_validator_test.cpp  aurora_initial_connection_strategy_plugin_test.cpp  auth_mock_objects.h  auth_provider_test.cpp  aws_sdk_test_environment.cpp  aws_sso_auth_plugin_test.cpp  browser_auth_flow_test.cpp  common_mock_objects.h  concurrent_map_test.cpp  concurrent_stack_test.cpp  connection_string_helper_test.cpp  custom_endpoint_mocks.h  custom_endpoint_plugin_test.cpp  error_handling_test.cpp  failover_mock_objects.h  failover_plugin_test.cpp  highest_weight_host_selector_test.cpp  html_util_test.cpp  iam_auth_plugin_test.cpp  init_plugin_helper_test.cpp  limitless_mock_objects.h  limitless_plugin_test.cpp  limitless_router_service_test.cpp  map_utils_test.cpp  mock_objects.cpp  mock_objects.h  null_wrapped_handle_test.cpp  okta_auth_plugin_test.cpp  okta_saml_util_test.cpp  plugin_service_test.cpp  random_host_selector_test.cpp  rds_strings_test.cpp  rds_utils_test.cpp  read_write_splitting_plugin_test.cpp  round_robin_host_selector_test.cpp  rw_splitting_mock_objects.h  secrets_manager_plugin_test.cpp  (+5 more)
(+146 files in other folders)
